fix(mobile-nav): fix mobile nav and center welcome text

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -50,12 +50,6 @@
 
         <ul class="social-icons" id="js-menu-2">
             <li class="social-icon">
-                <a href="https://m.facebook.com/daramola.adebayo">
-                    <i class="fab fa-facebook fa-2x"></i>
-                </a>
-            </li>
-
-            <li class="social-icon">
                 <a href="https://twitter.com/baystizzle">
                     <i class="fab fa-twitter fa-2x"></i>
                 </a>
@@ -82,30 +76,29 @@
             <section id="welcome-section">
                 <div class="section-overlay">
                     <div class="welcome-section-text">
-                        <h1 class="greeting text-secondary">
-                            Hello!
-                        </h1>
+                        <div class="wrapper">
+                            <h1 class="greeting text-secondary">
+                                Hello!
+                            </h1>
 
-                        <div id="intro">
-                            <h2 class="text-primary">My name is</h2>
-                            <h2 class="text-secondary">Adebayo</h2>
-                            <h2 class="text-primary">I'm a</h2>
-                            <h2 class="text-secondary">Web Developer</h2>
-                        </div>
-                        <div class="icons">
-                            <a href="https://m.facebook.com/daramola.adebayo?ref=bookmarks">
-                                <i class="fab fa-facebook fa-2x"></i>
-                            </a>
-                            <a href="https://mobile.twitter.com/baystizzle">
-                                <i class="fab fa-twitter fa-2x"></i>
-                            </a>
-                            <a href="https://github.com/Baystef">
-                                <i class="fab fa-github fa-2x"></i>
-                            </a>
-                            <a href="https://www.linkedin.com/in/adebayo-daramola-31b852b3">
-                                <i class="fab fa-linkedin fa-2x"></i>
-                            </a>
+                            <div id="intro">
+                                <h2 class="text-primary">My name is</h2>
+                                <h2 class="text-secondary">Adebayo Steve</h2>
+                                <h2 class="text-primary">and I'm a</h2>
+                                <h2 class="text-secondary">Web Developer</h2>
+                            </div>
+                            <div class="icons">
+                                <a href="https://mobile.twitter.com/baystizzle">
+                                    <i class="fab fa-twitter fa-2x"></i>
+                                </a>
+                                <a href="https://github.com/Baystef">
+                                    <i class="fab fa-github fa-2x"></i>
+                                </a>
+                                <a href="https://www.linkedin.com/in/adebayo-daramola-31b852b3">
+                                    <i class="fab fa-linkedin fa-2x"></i>
+                                </a>
 
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -127,13 +120,13 @@
                     </a>
                 </div>
                 <div class="project-tile">
-                    <a href="https://huddle-2.netlify.com">
+                    <a href="https://huddle-2.netlify.app">
                         <img src="img/projects/project2.jpg" alt="project 2">
                     </a>
                 </div>
                 <div class="project-tile">
-                    <a href="https://fylo.netlify.com">
-                        <img src="img/projects/project3.jpg" alt="project 3">
+                    <a href="https://tathas.netlify.app">
+                        <img src="img/projects/project3.png" alt="project 3">
                     </a>
                 </div>
                 <div class="project-tile">
@@ -178,8 +171,7 @@
     </main>
 
     <footer>
-        <a href="https://www.freecodecamp.org/baystef" target="_blank">Daramola Adebayo</a> &copy;<span
-            class="year"></span> All Rights
+        <span>Daramola Adebayo</span> &copy;<span class="year"></span> All Rights
         Reserved
     </footer>
 
