--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -5,7 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="icon" type="image/png" sizes="32x32" href="img/icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="manifest" href="site.webmanifest">
+
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
         integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
     <link rel="stylesheet" href="css/main.css">
@@ -115,13 +120,13 @@
 
             <div class="projects">
                 <div class="project-tile">
-                    <a href="https://multiliving.netlify.app">
-                        <img src="img/projects/project1.png" alt="project 1">
+                    <a href="https://playhomewin.com">
+                        <img src="img/projects/homewin.png" alt="project 1">
                     </a>
                 </div>
                 <div class="project-tile">
-                    <a href="https://huddle-2.netlify.app">
-                        <img src="img/projects/project2.jpg" alt="project 2">
+                    <a href="https://thisknee.netlify.app">
+                        <img src="img/projects/disney.png" alt="project 2">
                     </a>
                 </div>
                 <div class="project-tile">
